// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HierarchyTreeCard/> renders HierarchyTreeCard with level=1  1`] = `
<div>
  <div
    class="sc-bdfBwQ eEhUjR"
  >
    <div
      class="sc-hKgILt jzNZGF"
      tabindex="-1"
    >
      <div
        class="sc-gsTCUz bUSLSz"
      >
        Shirts
      </div>
      <div
        class="sc-dlfnbm bWrVlY"
      >
        12 Subcategories
      </div>
    </div>
  </div>
</div>
`;

exports[`<HierarchyTreeCard/> renders HierarchyTreeCard with level=2  1`] = `
<div>
  <div
    class="sc-bdfBwQ hGCaM"
  >
    <div
      class="sc-hKgILt jzNZGF"
      tabindex="-1"
    >
      <div
        class="sc-gsTCUz HYQBV"
      >
        Shirts
      </div>
      <div
        class="sc-dlfnbm bWrVlY"
      >
        12 Subcategories
      </div>
    </div>
  </div>
</div>
`;

exports[`<HierarchyTreeCard/> renders HierarchyTreeCard with level=3  1`] = `
<div>
  <div
    class="sc-bdfBwQ hGCaM"
  >
    <div
      class="sc-hKgILt jzNZGF"
      tabindex="-1"
    >
      <div
        class="sc-gsTCUz kooqDR"
      >
        Shirts
      </div>
      <div
        class="sc-dlfnbm bWrVlY"
      >
        12 Subcategories
      </div>
    </div>
  </div>
</div>
`;
